# DOS-Redux

./: .gitignore  CMakeLists.txt  Makefile  README.md  directory_structure.md
docs/: filesystem.md
include/fs/: disk.h  fat12.h  filesystem.h
include/memory/: memory.h
include/shell/: commands.h
src/bootloader/: boot.asm
src/fs/: disk.c  fat12.c  filesystem.c
src/kernel/: kernel.c  kernel_asm.asm
src/shell/: shell.c
